feat: [COSRS-20] finalizada implementação do obter  usuário/middleware.
