# usuario_autenticacao/controllers/UsuarioController.php
@@ -79,4 +79,37 @@ class UsuarioController
         }
     }
 
+    public function obter(array $dados): array
+
+        {
+            try {
+
+                if (!isset($dados['usuario_uuid'])) {
+                    throw new HttpException('UUID do usuário não informado', 400, 'VALIDATION', '01');
+                }
+        
+                $usuario_uuid = $dados['usuario_uuid'];
+                $resultado = $this->service->obter($usuario_uuid);
+        
+                return [
+                    'status' => 200,
+                    'data'   => $resultado,
+                ];
+            } catch (HttpException $e) {
+                return [
+                    'status' => $e->getStatusCode(),
+                    'error'  => $e->toArray(),
+                ];
+            } catch (\Exception $e) {
+                return [
+                    'status' => 500,
+                    'error'  => [
+                        'statusCode' => 500,
+                        'error'      => 'Erro interno do servidor',
+                        'ErrorCode'  => '00',
+                    ],
+                ];
+            }
+        }
+
 }
