# usuario_autenticacao/index.php
@@ -10,16 +10,19 @@ require_once __DIR__ . '/migrations/create_usuario_table.php';
 
 use UsuarioAutenticacao\Core\Router;
 use UsuarioAutenticacao\Core\Swagger;
+use UsuarioAutenticacao\Core\AuthMiddleware;
 
 // Configuração do roteamento
 header('Content-Type: application/json');
 
 $router = new Router();
+$authMiddleware = new AuthMiddleware($_ENV['JWT_SECRET']);
 
 $router->get('/api/docs/openapi', 'SwaggerController', 'serveOpenApi');
 
 $router->post('/usuario', 'UsuarioController', 'cadastrar', 'criar_usuario.swagger');
 $router->post('/logar', 'UsuarioController', 'logar', 'logar_usuario.swagger');
+$router->get('/usuario', 'UsuarioController', 'obter', 'obter_usuario.swagger', [$authMiddleware]);
 
 
 Swagger::setRouter($router);
